src/objects/DRDW_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Days_Per_Week__c</fullName>
        <defaultValue>&apos;5&apos;</defaultValue>
        <label>Days Per Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytical &amp; Assay Development</fullName>
                </value>
                <value>
                    <fullName>Bacteriology</fullName>
                </value>
                <value>
                    <fullName>BioProducts</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>DDS</fullName>
                </value>
                <value>
                    <fullName>Informatics</fullName>
                </value>
                <value>
                    <fullName>Parasitology</fullName>
                </value>
                <value>
                    <fullName>Target Enablement</fullName>
                </value>
                <value>
                    <fullName>Virology</fullName>
                </value>
                <value>
                    <fullName>FD Laboratory</fullName>
                </value>
                <value>
                    <fullName>Animal Care</fullName>
                </value>
                <value>
                    <fullName>Study Execution</fullName>
                </value>
                <value>
                    <fullName>FD Study Management</fullName>
                </value>
                <value>
                    <fullName>FD Veterinary Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Available_Per_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Available Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_per_Week__c</fullName>
        <label>Hours per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Animal Caretaker</fullName>
                </value>
                <value>
                    <fullName>Clinical Associate</fullName>
                </value>
                <value>
                    <fullName>ERL Scientist</fullName>
                </value>
                <value>
                    <fullName>Functional Head</fullName>
                </value>
                <value>
                    <fullName>Laboratory Scientist</fullName>
                </value>
                <value>
                    <fullName>Study Manager</fullName>
                </value>
                <value>
                    <fullName>Study Monitor</fullName>
                </value>
                <value>
                    <fullName>Veterinarian</fullName>
                </value>
                <value>
                    <fullName>Vet Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ERL</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Unique_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>User_Unique_Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DRDW Resource</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hours_should_be_between_0_and_24</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Hours_Available_Per_Day__c  &gt; 25, Hours_Available_Per_Day__c   &lt;0)</errorConditionFormula>
        <errorDisplayField>Hours_Available_Per_Day__c</errorDisplayField>
        <errorMessage>Hours can be from 0 to 24</errorMessage>
    </validationRules>
</CustomObject>